sample-app/nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: db-data
          mountPath: "/usr/share/nginx/html"
          

      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: nginx-data-pvc
